@@ -1,6 +1,10 @@
 package supersymmetry.common.rocketry.components;
 
-import java.util.*;
+import java.util.HashMap;
+import java.util.List;
+import java.util.Map;
+import java.util.Optional;
+import java.util.Set;
 import java.util.function.Predicate;
 import java.util.stream.Collectors;
 
@@ -22,7 +26,6 @@ import supersymmetry.common.tileentities.TileEntityCoverable;
 
 public class ComponentControlPod extends AbstractComponent<ComponentControlPod> {
 
-    public double radius;
     public Map<String, Integer> parts = new HashMap<>();
     public Map<String, Integer> instruments = new HashMap<>();
     public boolean hasAir;
@@ -32,66 +35,65 @@ public class ComponentControlPod extends AbstractComponent<ComponentControlPod> 
         super(
                 "spacecraft_control_pod",
                 "spacecraft_control_pod",
-                thing -> {
-                    return false;
-                });
-        this.setDetectionPredicate(ComponentControlPod::detect);
+                ComponentControlPod::detect);
     }
 
     private static boolean detect(Tuple<StructAnalysis, List<BlockPos>> input) {
         AxisAlignedBB aabb = input.getFirst().getBB(input.getSecond());
 
-        Set<BlockPos> blocks = input
-                .getFirst()
-                .getBlockConn(
-                        aabb, input.getFirst().getBlocks(input.getFirst().world, aabb, true).get(0));
-        input
-                .getFirst()
-                .checkHull(
-                        aabb, blocks, false); // for some reason this is the thing that sets BuildStat status to
+        StructAnalysis analysis = input.getFirst();
+        List<BlockPos> detectedBlocks = analysis.getBlocks(analysis.world, aabb, true);
+        if (detectedBlocks.isEmpty()) {
+            return false;
+        }
+
+        Set<BlockPos> blocks = analysis.getBlockConn(aabb, detectedBlocks.get(0));
+        analysis.checkHull(aabb, blocks, false);
+        // for some reason this is the thing that sets BuildStat status to
         // HULL_FULL
 
-        boolean hasAir = input.getFirst().status != BuildStat.HULL_FULL;
-        boolean has_the_block = input.getSecond().stream()
+        boolean hasAir = analysis.status != BuildStat.HULL_FULL;
+        boolean hasTheBlock = input.getSecond().stream()
                 .anyMatch(
-                        bp -> input
-                                .getFirst().world
-                                        .getBlockState(bp)
-                                        .getBlock()
-                                        .equals(SuSyBlocks.ROCKET_CONTROL));
+                        bp -> analysis.world
+                                .getBlockState(bp)
+                                .getBlock()
+                                .equals(SuSyBlocks.ROCKET_CONTROL));
 
-        return hasAir && has_the_block;
+        return hasAir && hasTheBlock;
     }
 
     @Override
     public Optional<NBTTagCompound> analyzePattern(StructAnalysis analysis, AxisAlignedBB aabb) {
         Set<BlockPos> blocksConnected = analysis.getBlockConn(aabb,
                 analysis.getBlocks(analysis.world, aabb, true).get(0));
-        Tuple<Set<BlockPos>, Set<BlockPos>> hullCheck = analysis.checkHull(aabb, blocksConnected, false);
-        Set<BlockPos> exterior = hullCheck.getFirst();
-        Set<BlockPos> interior = hullCheck.getSecond();
+        StructAnalysis.HullData hullCheck = analysis.checkHull(aabb, blocksConnected, false);
+        Set<BlockPos> exterior = hullCheck.exterior();
+        Set<BlockPos> interior = hullCheck.interior();
         return spacecraftPattern(blocksConnected, interior, exterior, analysis);
     }
 
     public Optional<NBTTagCompound> spacecraftPattern(
-                                                      Set<BlockPos> blocksConnected,
-                                                      Set<BlockPos> interior,
-                                                      Set<BlockPos> exterior,
-                                                      StructAnalysis analysis) {
+            Set<BlockPos> blocksConnected,
+            Set<BlockPos> interior,
+            Set<BlockPos> exterior,
+            StructAnalysis analysis) {
+        NBTTagCompound tag = new NBTTagCompound();
+
         Predicate<BlockPos> lifeSupportCheck = bp -> analysis.world.getBlockState(bp).getBlock()
                 .equals(SuSyBlocks.LIFE_SUPPORT);
         Set<BlockPos> lifeSupports = blocksConnected.stream().filter(lifeSupportCheck).collect(Collectors.toSet());
-        NBTTagCompound tag = new NBTTagCompound();
+
 
         lifeSupports.forEach(
                 bp -> {
                     Block block = analysis.world.getBlockState(bp).getBlock();
-                    NBTTagCompound list = tag.getCompoundTag("parts");
+                    NBTTagCompound list = tag.getCompoundTag(AbstractComponent.PARTS_KEY);
                     String part = ((VariantBlock<?>) block).getState(analysis.world.getBlockState(bp)).toString();
                     int num = list.getInteger(part); // default behavior is 0
                     list.setInteger(part, num + 1);
                     this.parts.put(part, num + 1);
-                    tag.setTag("parts", list);
+                    tag.setTag(AbstractComponent.PARTS_KEY, list);
                 });
 
         for (BlockPos bp : exterior) {
@@ -105,15 +107,13 @@ public class ComponentControlPod extends AbstractComponent<ComponentControlPod> 
                     }
                 }
             } else if (analysis.world.getBlockState(bp).getBlock().equals(SuSyBlocks.SPACE_INSTRUMENT)) {
-                {
-                    Block block = analysis.world.getBlockState(bp).getBlock();
-                    NBTTagCompound list = tag.getCompoundTag("instruments");
-                    String part = ((VariantBlock<?>) block).getState(analysis.world.getBlockState(bp)).toString();
-                    int num = list.getInteger(part); // default behavior is 0
-                    list.setInteger(part, num + 1);
-                    this.instruments.put(part, num + 1);
-                    tag.setTag("parts", list);
-                }
+                Block block = analysis.world.getBlockState(bp).getBlock();
+                NBTTagCompound list = tag.getCompoundTag(AbstractComponent.INSTRUMENTS_KEY);
+                String part = ((VariantBlock<?>) block).getState(analysis.world.getBlockState(bp)).toString();
+                int num = list.getInteger(part); // default behavior is 0
+                list.setInteger(part, num + 1);
+                this.instruments.put(part, num + 1);
+                tag.setTag(AbstractComponent.PARTS_KEY, list);
             } else {
                 analysis.status = BuildStat.HULL_WEAK;
             }
@@ -152,20 +152,12 @@ public class ComponentControlPod extends AbstractComponent<ComponentControlPod> 
             tag.setBoolean("hasAir", true);
             this.hasAir = true;
         }
-        double radius = analysis.getApproximateRadius(blocksConnected);
+        double radius = analysis.getRadius(blocksConnected);
 
         // The scan is successful by this point
         analysis.status = BuildStat.SUCCESS;
-        tag.setString("type", type);
-        tag.setString("name", name);
-        tag.setDouble("radius", (radius));
-        this.radius = radius;
-        double mass = 0;
-        for (BlockPos block : blocksConnected) {
-            mass += getMass(analysis.world.getBlockState(block));
-        }
-        tag.setDouble("mass", mass);
-        this.mass = mass;
+        collectInfo(analysis, blocksConnected, tag);
+
         writeBlocksToNBT(blocksConnected, analysis.world);
         return Optional.of(tag);
     }
@@ -176,50 +168,50 @@ public class ComponentControlPod extends AbstractComponent<ComponentControlPod> 
         tag.setDouble("radius", this.radius);
         tag.setDouble("volume", this.volume);
         tag.setBoolean("hasAir", this.hasAir);
-        NBTTagCompound instruments = new NBTTagCompound();
-        NBTTagCompound parts = new NBTTagCompound();
+        NBTTagCompound instrumentsTag = new NBTTagCompound();
+        NBTTagCompound partsTag = new NBTTagCompound();
         for (var part : this.parts.entrySet()) {
-            parts.setInteger(part.getKey(), part.getValue());
+            partsTag.setInteger(part.getKey(), part.getValue());
         }
         for (var instrument : this.instruments.entrySet()) {
-            instruments.setInteger(instrument.getKey(), instrument.getValue());
+            instrumentsTag.setInteger(instrument.getKey(), instrument.getValue());
         }
-        tag.setTag("instruments", instruments);
-        tag.setTag("tools", parts);
+        tag.setTag(AbstractComponent.INSTRUMENTS_KEY, instrumentsTag);
+        tag.setTag("tools", partsTag);
     }
 
     @Override
     public Optional<ComponentControlPod> readFromNBT(NBTTagCompound compound) {
-        ComponentControlPod controlpod = new ComponentControlPod();
+        ComponentControlPod controlPod = new ComponentControlPod();
 
-        if (!compound.getString("name").equals(controlpod.name)) return Optional.empty();
-        if (!compound.getString("type").equals(controlpod.type)) return Optional.empty();
+        if (compound.getString("name").isEmpty()) return Optional.empty();
+        if (compound.getString("type").isEmpty()) return Optional.empty();
         if (!compound.hasKey("radius", NBT.TAG_DOUBLE)) return Optional.empty();
         if (!compound.hasKey("mass", NBT.TAG_DOUBLE)) return Optional.empty();
         if (!compound.hasKey("hasAir")) return Optional.empty();
         if (!compound.hasKey("volume", NBT.TAG_DOUBLE)) return Optional.empty();
-        if (!compound.hasKey("parts", NBT.TAG_COMPOUND)) return Optional.empty();
-        if (!compound.hasKey("instruments", NBT.TAG_COMPOUND)) return Optional.empty();
+        if (!compound.hasKey(AbstractComponent.PARTS_KEY, NBT.TAG_COMPOUND)) return Optional.empty();
+        if (!compound.hasKey(AbstractComponent.INSTRUMENTS_KEY, NBT.TAG_COMPOUND)) return Optional.empty();
 
         if (!compound.hasKey("materials", NBT.TAG_LIST)) return Optional.empty();
         compound
                 .getTagList("materials", NBT.TAG_COMPOUND)
-                .forEach(x -> controlpod.materials.add(MaterialCost.fromNBT((NBTTagCompound) x)));
-        controlpod.radius = compound.getDouble("radius");
-        controlpod.mass = compound.getDouble("mass");
-        controlpod.volume = compound.getDouble("volume");
-        controlpod.hasAir = compound.getBoolean("hasAir");
+                .forEach(tag -> controlPod.materials.add(MaterialCost.fromNBT((NBTTagCompound) tag)));
+        controlPod.radius = compound.getDouble("radius");
+        controlPod.mass = compound.getDouble("mass");
+        controlPod.volume = compound.getDouble("volume");
+        controlPod.hasAir = compound.getBoolean("hasAir");
 
-        NBTTagCompound instrumentsList = compound.getCompoundTag("instruments");
+        NBTTagCompound instrumentsList = compound.getCompoundTag(AbstractComponent.INSTRUMENTS_KEY);
         for (String key : instrumentsList.getKeySet()) {
-            controlpod.instruments.put(key, compound.getInteger(key));
+            controlPod.instruments.put(key, instrumentsList.getInteger(key));
         }
 
-        NBTTagCompound partsList = compound.getCompoundTag("parts");
+        NBTTagCompound partsList = compound.getCompoundTag(AbstractComponent.PARTS_KEY);
         for (String key : partsList.getKeySet()) {
-            controlpod.parts.put(key, compound.getInteger(key));
+            controlPod.parts.put(key, partsList.getInteger(key));
         }
 
-        return Optional.of(controlpod);
+        return Optional.of(controlPod);
     }
 }
